# milolewAudio

./: .gitignore  CLAUDE.md  Cargo.toml  RustDAW_GUI_Specification.md  RustDAW_GUI_Specification.md:Zone.Identifier  run.sh
.claude/worktree-briefs/: clip-operations.md  engine-safety.md  integration.md  keyboard-shortcuts.md  polish.md  recording-flow.md  track-management.md  ui-architecture.md  ui-views.md  undo-system.md
.github/workflows/: ci.yml
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: callback.rs  command_processor.rs  disk_io.rs  engine.rs  lib.rs  track.rs  transport.rs
crates/audio-engine/src/graph/: edge.rs  mod.rs  node.rs  topology.rs
crates/audio-engine/src/graph/nodes/: input_node.rs  mixer_node.rs  output_node.rs  track_node.rs  wav_player.rs
crates/common-types/: Cargo.toml
crates/common-types/src/: audio_buffer.rs  commands.rs  events.rs  lib.rs  time.rs
crates/ma-audio-engine/: Cargo.toml
crates/ma-audio-engine/src/: audio_decode.rs  callback.rs  command_processor.rs  device_manager.rs  disk_io.rs  engine.rs  export.rs  input_capture.rs  lib.rs  metronome.rs  midi_recorder.rs  peak_cache.rs  track.rs  transport.rs
crates/ma-audio-engine/src/graph/: edge.rs  node.rs  topology.rs
crates/ma-audio-engine/tests/: e2e_smoke.rs  recording_overflow.rs
crates/ma-core/: Cargo.toml
crates/ma-core/src/: audio_buffer.rs  commands.rs  device.rs  events.rs  ids.rs  lib.rs  midi_clip.rs  parameters.rs  project_file.rs  time.rs  undo.rs
crates/ma-ui/: Cargo.toml
crates/ma-ui/src/: app.rs  app_data.rs  audio_preview.rs  config.rs  demo_data.rs  file_loader.rs  lib.rs  main.rs  theme.css  undo_actions.rs
crates/ma-ui/src/app_data/: app_event.rs  demo_data.rs  dispatch.rs  engine_adapter.rs  mod.rs
crates/ma-ui/src/engine_bridge/: bridge.rs  commands.rs  mock_engine.rs  mod.rs  real_bridge.rs  responses.rs
crates/ma-ui/src/state/: app_state.rs  arrangement_state.rs  browser_state.rs  mixer_state.rs  mod.rs  piano_roll_state.rs  transport_state.rs
crates/ma-ui/src/types/: midi.rs  mod.rs  time.rs  track.rs
crates/ma-ui/src/views/: arrangement_view.rs  browser_view.rs  keyboard.rs  mixer_view.rs  mod.rs  piano_roll_view.rs  preferences_view.rs  root_view.rs
crates/ma-ui/src/views/arrangement/: clip_interaction.rs  clip_renderer.rs  clipboard.rs  grid.rs  live_waveform.rs  mod.rs  playhead.rs  selection.rs  snap.rs
crates/ma-ui/src/views/device_rack/: device_slot.rs  mod.rs
crates/ma-ui/src/widgets/: channel_strip.rs  fader.rs  keyboard_strip.rs  knob.rs  master_strip.rs  meter_utils.rs  mod.rs  pan_knob.rs  peak_meter.rs  timeline_ruler.rs  transport_bar.rs
docs/: code-review-graph.html  code-review-graph.md
gui-interface/: Cargo.toml
gui-interface/src/: app.rs  lib.rs  main.rs
gui-interface/src/engine_bridge/: mod.rs
gui-interface/src/state/: piano_roll_state.rs  transport_state.rs
gui-interface/src/types/: time.rs
gui-interface/src/views/: arrangement_view.rs  mixer_view.rs  piano_roll_view.rs
gui-interface/src/widgets/: mod.rs  peak_meter.rs  transport_bar.rs
scripts/: merge-phase.sh  monitor.sh
(+8 files in other folders)
