[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/milolew/milolewAudio"

[workspace.dependencies]
# Shared types
ma-core = { path = "crates/ma-core" }

# Audio I/O
cpal = "0.15"

# Lock-free communication
rtrb = "0.3"
crossbeam-channel = "0.5"

# Audio file I/O
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "pcm", "aac"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
