[package]
name = "ma-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types between audio engine and GUI for milolew Audio DAW"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
