[package]
name = "ma-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "milolew Audio — DAW GUI interface (vizia-based)"

[dependencies]
ma-core = { workspace = true }
ma-audio-engine = { workspace = true }
vizia = "0.3"
rtrb = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"

[dev-dependencies]
pretty_assertions = "1"
